Grid fix + header margin collapse

--- a/app/templates/project-name.Website/Styles/Company/layout/_layout__header.scss
+++ b/app/templates/project-name.Website/Styles/Company/layout/_layout__header.scss
@@ -8,6 +8,7 @@
 .site-header {
     background-color: #333;
     color: #fff;
+    overflow: hidden;
 
     .container {
         margin: 10px auto;
